# shellnuts

./: .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.mjs  mdsvex.config.js  nx.json  package-lock.json  package.json  postcss.config.js  svelte.config.js  tailwind.config.js  vite.config.js  workspace.json
apps/rezepte-parser/src/: RezepteParser.py  rezept.py
apps/shellnuts/: jest.config.js  tsconfig.json
apps/shellnuts-backend/: Cargo.toml
apps/shellnuts-backend/src/: main.rs
apps/shellnuts-backend/src/elastic/: elastic.rs
apps/shellnuts-backend/src/repo/: repository.rs
apps/shellnuts-backend/src/routes/: create.rs  queries.rs
apps/shellnuts-backend/src/state/: elastic.rs
apps/shellnuts/src/: index.html  index.ts  manifest.json
libs/rahmen/src/: components.d.ts  index.html  index.ts
posts/quarkusObservabilityInOneAfternoon/: index.md
posts/springboot3AndPinnedDeps/: index.md
src/: app.css  app.html  hooks.client.js  prism.css
src/lib/: server-loaders.test.js  sitemap-endpoint.test.js  themes.js
src/lib/components/: ContentNav.svelte  Footer.svelte  Headers.svelte  PostList.svelte  SeoHead.svelte
src/lib/data/: posts.js
src/lib/icons/: GithubMark.svelte  ThemeToggleIcon.svelte
src/routes/: +layout.js  +layout.server.js  +layout.svelte  +page.server.js  +page.svelte
src/routes/about/: +page.svelte
src/routes/blog/: +page.svelte
src/routes/blog/[[page]]/: +page.server.js  +page.svelte
src/routes/sitemap.xml/: +server.js
static/: robots.txt
test-results/: .last-run.json
tests/: navigation.test.js  seo.test.js
(+24 files in other folders)
