[package]
name = "shellnuts_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_contrib = "0.4.10"
elasticsearch = "7.14.0-alpha.1"
serde = "~1"
serde_json = "~1"
env_logger = "0.7"
log = "0.4"
thiserror = "1.0"
validator = "0.11"
